[gd_scene load_steps=6 format=2]

[ext_resource path="res://Components/sound_player/sound_player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/smart_ui_nodes/smart_button/smart_button.gd" type="Script" id=2]
[ext_resource path="res://UI/menu_click.wav" type="AudioStream" id=3]
[ext_resource path="res://UI/menu_hover.wav" type="AudioStream" id=4]

[sub_resource type="StyleBoxEmpty" id=1]

[node name="SmartButton" type="Button"]
margin_right = 12.0
margin_bottom = 20.0
custom_styles/focus = SubResource( 1 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}
selected_color = Color( 0.968627, 0.588235, 0.0901961, 1 )
hover_sound = ExtResource( 4 )
click_sound = ExtResource( 3 )

[node name="sound_player" parent="." instance=ExtResource( 1 )]
FREE_WHEN_EMPTY = false

[connection signal="focus_entered" from="." to="." method="_on_SmartButton_focus_entered"]
[connection signal="focus_exited" from="." to="." method="_on_SmartButton_focus_exited"]
[connection signal="gui_input" from="." to="." method="_on_SmartButton_gui_input"]
[connection signal="mouse_entered" from="." to="." method="_on_SmartButton_mouse_entered"]
[connection signal="pressed" from="." to="." method="_on_SmartButton_pressed"]
